--- a/Python.ipynb
+++ b/Python.ipynb
@@ -1634,17 +1634,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "###Recursively finding sum of n-numbers\n",
+    "def recursive_sum(a):\n",
+    "    if a==0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return a + recursive_sum(a-1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recursive_sum(5)"
+   ]
   }
  ],
  "metadata": {
